--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "dependencies": {
     "core-js": "^2.6.5",
+    "date-fns": "^2.1.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
