--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rollup": "^1.21.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-vue": "^5.0.1",
     "rollup-plugin-web-worker-loader": "^0.6.0",
